2013-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.sgml (cygwinenv-implemented-options): Change description
	for winsymlink option to explain new implementation.
	* new-features.sgml (ov-new1.7.19): Add support for native symlinks and
	AFS.

2013-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* Throughout, eliminate Windows 2000 from the documentation.
	* overview.sgml (brief-history): Mention native AMD64 support.

2013-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (SGMLDIRS): Accommodate dropping utils_source and
	cygwin_source from ../Makefile.common.
	* new-features.sgml (ov-new1.7.19): New section.  Document dropped
	support for pre-XP SP3 and added support for 64 bit Cygwin.

2013-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* faq-what.xml (faq.what.supported): Change to accommodate existence
	of 64 bit version.

2013-03-27  Corinna Vinschen  <corinna@vinschen.de>

	* faq-what.xml (faq.what.supported): Mention Windows 8 and Server 2012.
	Change sentence on native 64 bit version.

2013-03-06  Anthony Geoghegan <anthony.geoghegan@gmail.com>

	* faq-using.xml: Fix expression and uppercase Samba.

2013-02-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* pathnames.sgml: Remove stray '@'.

2013-02-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* pathnames.sgml: Clarify '@' processing.

2013-01-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* faq-programming.xml: Remove reference to "make check".

2013-01-12  Thomas Wolff  <towo@towo.net>

	* new-features.sgml (ov-new1.7.18): Add console enhancements.

2012-12-20  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.sgml (pathnames-at): Drop confusing description on
	"embedded double quotes".

2012-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.18): Add sparse change.
	* pathnames.sgml (mount-table): Document sparse mount option.

2012-12-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
